@@ -1,6 +1,6 @@
 % File src/library/base/man/as.POSIXlt.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2014 R Core Team
+% Copyright 1995-2017 R Core Team
 % Distributed under GPL 2 or later
 
 \name{as.POSIX*}
@@ -31,22 +31,34 @@
 as.POSIXct(x, tz = "", \dots)
 as.POSIXlt(x, tz = "", \dots)
 
-\method{as.POSIXlt}{character}(x, tz = "", format, \dots)
-
+\method{as.POSIXlt}{character}(x, tz = "", format,
+           tryFormats = c("\%Y-\%m-\%d \%H:\%M:\%OS",
+                          "\%Y/\%m/\%d \%H:\%M:\%OS",
+                          "\%Y-\%m-\%d \%H:\%M",
+                          "\%Y/\%m/\%d \%H:\%M",
+                          "\%Y-\%m-\%d",
+                          "\%Y/\%m/\%d"),
+           optional = FALSE, \dots)
+\method{as.POSIXlt}{default}(x, tz = "",
+           optional = FALSE, \dots)
 \method{as.POSIXlt}{numeric}(x, tz = "", origin, \dots)
 
 \method{as.double}{POSIXlt}(x, \dots)
 }
 \arguments{
-  \item{x}{An object to be converted.}
-  \item{tz}{A time zone specification to be used for the conversion,
+  \item{x}{\R  object to be converted.}
+  \item{tz}{time zone specification to be used for the conversion,
     \emph{if one is required}.  System-specific (see \link{time zones}),
     but \code{""} is the current time zone, and \code{"GMT"} is UTC
-    (Universal Time, Coordinated). Invalid values are most commonly
+    (Universal Time, Coordinated).  Invalid values are most commonly
     treated as UTC, on some platforms with a warning.}
   \item{\dots}{further arguments to be passed to or from other methods.}
   \item{format}{character string giving a date-time format as used
     by \code{\link{strptime}}.}
+  \item{tryFormats}{\code{\link{character}} vector of \code{format}
+    strings to try if \code{format} is not specified.}
+  \item{optional}{\code{\link{logical}} indicating to return \code{NA}
+    (instead of signalling an error) if the format guessing does not succeed.}
   \item{origin}{a date-time object, or something which can be coerced by
     \code{as.POSIXct(tz = "GMT")} to such an object.}
 }
@@ -128,7 +140,7 @@ as.POSIXct(strptime("2010-10-31 01:30:00", "\%Y-\%m-\%d \%H:\%M:\%S"))
   If a time zone is needed and that specified is invalid on your system,
   what happens is system-specific but attempts to set it will probably
   be ignored.
-  
+
   Conversion from character needs to find a suitable format unless one
   is supplied (by trying common formats in turn): this can be slow for
   long inputs.
